# swisscli

./: AGENTS.md  README.md  pyproject.toml
src/swisscli/: __init__.py  cli.py  loader.py  plugin.py
src/swisscli/plugins/containers/: docker.py  podman.py
src/swisscli/plugins/package/: apt.py  dnf.py  dpkg.py  rpm.py  yum.py
src/swisscli/plugins/ssl/: openssl.py  ssh_keygen.py
src/swisscli/plugins/web/: curl.py  wget.py
