[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swisscli"
version = "0.1.0"
description = "A plugin-based CLI wrapper ecosystem for common command-line tools"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.scripts]
swisscli = "swisscli.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/swisscli"
